# Obsidian

./: README.md  pyproject.toml
obsidian/server/: procotol.py
